--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <div class="title"> 
+      <h1 id="title">Digital Art Club</h1>
+      <p id="">Art Gallery</p>
+    </div>
+
+    <div class="filters">
+      <h1 id="Generic">Categories:</h1>
+      <button class="filter-btn">All</button>
+      <button class="filter-btn">Individual</button>
+      <button class="filter-btn">Collaboration</button>
+    </div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
