--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,13 +12,23 @@
     <div class="title"> 
       <h1 id="title">Digital Art Club</h1>
       <p id="">Art Gallery</p>
+      <button id="themeToggle">Toggle Theme</button>
     </div>
 
     <div class="filters">
       <h1 id="Generic">Categories:</h1>
       <button class="filter-btn">All</button>
       <button class="filter-btn">Individual</button>
-      <button class="filter-btn">Collaboration</button>
+      <h1 id="Collab">Collaborations:</h1>
+      <button class="filter-btn">Collab 1</button>
+      <button class="filter-btn">Collab 2</button>
+      <button class="filter-btn">Collab 3</button>
+      <button class="filter-btn">Collab 4</button>
+      <button class="filter-btn">Collab 5</button>
+      <button class="filter-btn">Collab 6</button>  
+      <button class="filter-btn">Collab 7</button>
+      <button class="filter-btn">Collab 8</button>
+      <button class="filter-btn">Collab 9</button>
     </div>
 
     <script type="module" src="/src/main.js"></script>
