--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>vite-project</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
       <button id="themeToggle">Toggle Theme</button>
     </div>
 
-    <div class="filters">
+    <div class="container">
       <h1 id="Generic">Categories:</h1>
       <button class="filter-btn">All</button>
       <button class="filter-btn">Individual</button>
@@ -31,6 +32,6 @@
       <button class="filter-btn">Collab 9</button>
     </div>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
