--- a/digartgal/index.html
+++ b/digartgal/index.html
@@ -16,7 +16,7 @@
       <button id="themeToggle">Toggle Theme</button>
     </div>
 
-    <div class="container">
+    <div class="filters">
       <h1 id="Generic">Categories:</h1>
       <button class="filter-btn">All</button>
       <button class="filter-btn">Individual</button>
